OpenJDK fixes